--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-javac.debug=true
+javac.debug=false
 javadoc.preview=true
 jlink.strip=false
 user.properties.file=C:\\Users\\David\\AppData\\Roaming\\NetBeans\\23\\build.properties
