--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
-javadoc.html5=false
+javadoc.html5=true
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
