--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -61,7 +61,7 @@ javac.test.modulepath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.html5=true
 javadoc.noindex=false
@@ -71,7 +71,7 @@ javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=
+javadoc.windowtitle=JSimple Game Engine (JSGE)
 # The jlink additional root modules to resolve
 jlink.additionalmodules=
 # The jlink additional command line parameters
