preparations for implementing gamepad support

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -13,3 +13,6 @@ libs.java-stream-player-10.0.2.classpath=\
     ${base}/java-stream-player-10.0.2/tritonus-all-0.3.7.2.jar;\
     ${base}/java-stream-player-10.0.2/vorbis-support-1.1.0.jar
 libs.java-stream-player-10.0.2.displayName=java-stream-player-10.0.2
+libs.jinput-2.0.10.classpath=\
+    ${base}/jinput-2.0.10/jinput-2.0.10.jar
+libs.jinput-2.0.10.displayName=jinput-2.0.10
