--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -88,7 +88,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=br.com.davidbuzatto.jsge.tests.ControllerTest
+main.class=br.com.davidbuzatto.jsge.examples.basic.GamepadsExample
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
 manifest.custom.application.library.allowable.codebase=
 # Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
@@ -105,10 +105,6 @@ project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path=lib/natives
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
