--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -6,12 +6,12 @@ libs.java-stream-player-10.0.2.classpath=\
     ${base}/java-stream-player-10.0.2/java-stream-player-10.0.2.jar;\
     ${base}/java-stream-player-10.0.2/commons-io-2.17.0.jar;\
     ${base}/java-stream-player-10.0.2/jaudiotagger-2.2.7.jar;\
+    ${base}/java-stream-player-10.0.2/java-vorbis-support-1.2.1.jar;\
     ${base}/java-stream-player-10.0.2/jflac-codec-1.5.2.jar;\
     ${base}/java-stream-player-10.0.2/jlayer-1.0.1.4.jar;\
-    ${base}/java-stream-player-10.0.2/jorbis-0.0.17-2.jar;\
+    ${base}/java-stream-player-10.0.2/jorbis-0.0.17.4.jar;\
     ${base}/java-stream-player-10.0.2/mp3spi-1.9.5.4.jar;\
-    ${base}/java-stream-player-10.0.2/tritonus-all-0.3.7.2.jar;\
-    ${base}/java-stream-player-10.0.2/vorbis-support-1.1.0.jar
+    ${base}/java-stream-player-10.0.2/tritonus-all-0.3.7.2.jar
 libs.java-stream-player-10.0.2.displayName=java-stream-player-10.0.2
 libs.jinput-2.0.10.classpath=\
     ${base}/jinput-2.0.10/jinput-2.0.10.jar
